<resources>
    <string name="app_name">Sigtec Digital</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vendas">vendas</string>
    <string name="produtos">Produtos</string>
    <string name="contas">Contas</string>
    <string name="checkout">Checkout</string>
    <string name="ponto">Ponto</string>
    <string name="perfil">Perfil</string>

    <string name="RelatorioVendas">Relatório de Vendas</string>
    <string name="TotalPedidosVendas">Total de pedidos</string>
    <string name="PedidosCancelados">Pedidos cancelados</string>
    <string name="RelatorioProduto">Relatório de Produtos</string>
    <string name="RelatorioContas">Relatório de Contas</string>
    <string name="RelatorioCheckout">Relatório de Checkout</string>
</resources>
